--- a/Maktab CW-008/6/assets/styles/style.css
+++ b/Maktab CW-008/6/assets/styles/style.css
@@ -4,19 +4,24 @@
     box-sizing: border-box;
 }
 
+
 html, body {
     width: 100%;
     height: 100%;
 }
-body {
+
+.bcg {
     background-image: linear-gradient(to right,#d33b74,#7045d5);
-    
+    width: 100%;
+    height: 70%;
+    position: absolute;
+    z-index: -1;
 }
 
 .container {
     display: grid;
     padding: 2rem;
-    grid-template-rows: 18rem 3rem 7rem 18rem 20rem;
+    grid-template-rows: 18rem 3rem 7rem 18rem max-content;
     gap: 1rem;
 }
 
@@ -42,7 +47,6 @@ body {
     gap: 1rem;
 }
 .priceSec {
-    grid-column: 3;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -105,7 +109,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    width: 30rem;
+    width: 45%;
 }
 
 .description {
@@ -157,8 +161,130 @@ body {
 .gallery {
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    gap:0.5rem
+    gap:0.5rem;
+    padding:8px;
 }
 .gallery img {
     margin: auto;
+}
+.menu {
+    background-color: #FFC600;
+    display: none;
+    width: 5rem;
+    justify-content: center;
+    align-items: center;
+
+}
+
+@media (max-width: 1000px) {
+    .menu {
+        display: flex;
+        
+    }
+    .container {
+        grid-template-rows: 3rem 18rem 7rem 18rem max-content ;
+    }
+    .productBar {
+        display: none;
+    }
+    .gallery {
+        grid-template-columns: repeat(4,1fr);
+    }
+}
+
+@media (max-width: 720px) {
+    .menu {
+        display: flex;
+        
+    }
+    .container {
+        grid-template-rows: 3rem 18rem max-content 18rem max-content ;
+    }
+
+    .servicesBar{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .productBar {
+        display: none;
+    }
+    .gallery {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .menu {
+        display: flex;
+        
+    }
+    .container {
+        grid-template-rows: 3rem 18rem max-content 18rem max-content ;
+    }
+    .head {
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(2,1fr);
+        
+    }
+    .imgBox {
+        grid-row: 1;
+    }
+    .priceSec {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-column: 1/3;
+        grid-row: 2;
+    }
+
+    .servicesBar{
+        grid-template-columns: repeat(2,1fr);
+
+    }
+    .productBar {
+        display: none;
+    }
+    .gallery {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .menu {
+        display: flex;
+        
+    }
+    .container {
+        grid-template-rows: 3rem max-content max-content 18rem max-content ;
+    }
+    .head {
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(2,1fr);
+        
+    }
+    .imgBox {
+        grid-row: 1;
+    }
+    .priceSec {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-column: 1/3;
+        grid-row: 2;
+    }
+    .servicesBar{
+        grid-template-columns: repeat(1,1fr);
+
+    }
+    .tacoDes {
+        flex-direction: column;
+        align-items: center;
+    }
+    .productBar {
+        display: none;
+    }
+    .gallery {
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .section-title {
+        font-size: 15px;
+    }
 }
